<resources>
    <string name="app_name">Homestay Pet</string>
    <string name="Intro_HomePet">Homestay Pet adalah solusi bagi kamu yang ingin menitipkan kucing peliharaanmu!
    \nSilakan isi data kucing kesayangan kamu di bawah.</string>
    <string name="nama">Nama</string>
    <string name="nama2">nama kucing</string>
    <string name="info">Ketik di sini</string>
    <string name="nama_invalid">nama tidak boleh kosong</string>

    /* ----------------------------------------------- */
    /* String untuk radio button */
    <string name="kucing">Kucing</string>

    /* ----------------------------------------------- */
    /* String untuk memunculkan data pilihan */
    <string name="dataNama" formatted="true">Nama: %1$s</string>
    <string name="dataHari" formatted="true">Berapa lama: %1$s hari</string>
    <string name="harga">Harga</string>
    <string name="dataHarga" formatted="true">Harga: %1$s</string>

    /* ----------------------------------------------- */
    /* String untuk formulir */
    <string name="hari">Berapa lama</string>
    <string name="hari_invalid">Lama menginap tidak boleh kosong</string>
    <string name="jumlah_hari">hari</string>

    /* ------------------------------------------------- */
    <string name="homestay_info">Homestay Pet adalah tempat penitipan kucing yang dapat anda percaya
    \nUntuk lanjut hubungi 0000-1111-2222</string>
    <string name="bagikan_template">Aplikasi Homestay Pet</string>
    <string name="swipe_ke_atas">Silakan swipe ke atas</string>
    <string name="anak_kucing">untuk mendapatkan gambar, \nisi kolom nama dengan: kucing</string>
    <string name="koneksi_error">Koneksi Error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Ada hewan baru!</string>
    <string name="notif_text">Cek sekarang biar tidak lupa</string>

    <string name="tombolKirim">Kirim</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="histori">Histori</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">hapus</string>
    <string name="batal">batal</string>
    <string name="bagikan">Bagikan</string>

    /* Untuk menu histori */
    <string name="data_pet">Nama: %1$s </string>
    <string name="data_hari">Lama hari: %1$s </string>
    <string name="data_harga">Harga: %1$f </string>
</resources>